[ITB-1545] Upgrade to Java 21